# flatty-py

./: .gitignore  LICENSE  README-cn.md  README.md  pyproject.toml
flatty/: __init__.py  cli.py  config.py  core.py  exceptions.py
flatty/services/: __init__.py  downloader.py  formatter.py  scanner.py
flatty/utils/: __init__.py  logger.py  security.py
flatty_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
