[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flatty-py"
version = "1.0.0"
authors = [
  { name="zhangee", email="your.email@example.com" },
]
description = "Transform any GitHub repo or folder into a simple text file for LLMs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
    "pyperclip>=1.8.0",
    "pathspec>=0.11.0",  # 新增：用于解析 .gitignore
]

[project.optional-dependencies]
accurate-tokens = [
    "tiktoken>=0.5.0",  # 可选：更准确的 Token 计数
]
dev = [
    "pytest>=7.0.0",
    "black",
    "ruff",
    "mypy"
]

[project.scripts]
flatty = "flatty.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["flatty*"]